--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-modal-video": "^1.2.10",
+    "react-perfect-scrollbar": "^1.5.8",
     "react-phone-number-input": "^3.2.8",
     "react-responsive-carousel": "^3.2.23",
     "react-sticky": "^6.0.3",
