--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-phone-number-input": "^3.2.8",
     "react-responsive-carousel": "^3.2.23",
     "react-sticky": "^6.0.3",
+    "react-swipeable": "^7.0.0",
     "react-virtualized-auto-sizer": "^1.0.6",
     "react-window": "^1.8.7",
     "sass": "^1.54.4"
